--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -25,7 +25,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href={% url "goods:catalog" %}>Каталог</a>
+                    <a class="nav-link active" aria-current="page" href={% url "goods:index" %}>Каталог</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">О нас</a>
