--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -47,27 +47,23 @@
     <ul class="pagination">
       <li class="page-item {% if not products.has_previous %}disabled{% endif %}">
         <a class="page-link" href="
-            {% if products.has_previous %}
-                {% url "catalog:index" products.previous_page_number %}
-            {% else %}
-                #
-        {% endif %}">Назад</a></li>
+            {% if products.has_previous %} ?page={{ products.previous_page_number }}
+                {% else %} #
+            {% endif %}">Назад</a></li>
 
-      {% for page in products.paginator.page_range %}
-      {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
-        <li class="page-item {% if products.number == page %}disabled{% endif %}">
-            <a class="page-link" href={% url "catalog:index" page %}>{{ page }}</a></li>           
-      {% endif %}
-      {% endfor %}
+        {% for page in products.paginator.page_range %}
+        {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
+            <li class="page-item {% if products.number == page %}disabled{% endif %}">
+                <a class="page-link" href="?page={{ page }}">{{ page }}</a></li>           
+        {% endif %}
+        {% endfor %}
 
 
       <li class="page-item {% if not products.has_next %}disabled{% endif %}">
         <a class="page-link" href="
-            {% if products.has_next %}
-                {% url "catalog:index" products.next_page_number %}
-            {% else %}
-            #
-        {% endif %}">Далее</a></li>
+            {% if products.has_next %} ?page={{ products.next_page_number }}
+                {% else %} #
+            {% endif %}">Далее</a></li>
     </ul>
   </nav>
 {% endblock %}
