--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,36 +7,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block css %}{% endblock %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href={% static "css/stylebase.css" %}>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>{{ title }}</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <img src={% static "icons/logo.jpg" %} class="navbar-brand" href="{% url "main:index" %}" alt="logo" style="width: 50px;">
+      <nav class="navbar navbar-expand-md py-5">
+        
+        <div class="col-6">
+          <a class="offset-1 navbar-brand" href="#">Lenka</a>
+        </div>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href={% url "goods:index" %}>Каталог</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">О нас</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Контакты</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="col-4 collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="me-4 nav-item"><a href="#" class="nav-link">Каталог</a></li>
+            <li class="me-4 nav-item"><a href="#" class="nav-link">О бренде</a></li>
+            <li class="me-4 nav-item"><a href="#" class="nav-link">Контакты</a></li>
+          </ul>
+        </div>
+
+        <a class="col-2 offset-1 navbar-text" href="#">
+          <i class="bi bi-bag"></i>
+        </a>
+          
+      </nav>     
     </header>
 
     <section>
@@ -45,6 +47,46 @@
     </section>
 
     <footer>
+        <div class="row">
+          
+          <div class="col-3 mb-4">
+            <a class="offset-2 navbar-brand" href="#">Lenka</a>
+          </div>
+
+          <div class="col-3 mb-4">
+            <a class="nav-link" href="#">О шёлке</a>
+          </div>
+
+          <div class="col-3 mb-4">
+            <ul class="list-unstyled">
+              <li>
+                <a class="mb-4 nav-link" href="#">О бренде</a>
+              </li>
+              <li>
+                <a class="mb-4 nav-link" href="#">Контакты</a>
+              </li>
+              <li>
+                <a class="mb-4 nav-link" href="#">Доставка и оплата</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-3 mb-4">
+            <ul class="list-unstyled">
+              <li>
+                <a class="mb-4 nav-link" href="#">Политика конфиденциальности</a>
+              </li>
+              <li>
+                <a class="mb-4 nav-link" href="#">Публичная оферта</a>
+              </li>
+              <li>
+                <a class="mb-4 nav-link" href="#">Согласие на обработку персональных данных</a>
+              </li>
+            </ul>
+          </div>
+
+
+        </div>
 
     </footer>
 
