--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,6 +11,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href={% static "css/stylebase.css" %}>
+    <link rel="stylesheet" href={% static "css/stylecard.css" %}>
     <title>{{ title }}</title>
 </head>
 
@@ -19,7 +20,7 @@
       <nav class="navbar navbar-expand-md py-5">
         
         <div class="col-6">
-          <a class="offset-1 navbar-brand" href="#">Lenka</a>
+          <a class="offset-1 navbar-brand" href="{% url "main:index" %}">Lenka</a>
         </div>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +29,7 @@
 
         <div class="col-4 collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="me-4 nav-item"><a href="#" class="nav-link">Каталог</a></li>
+            <li class="me-4 nav-item"><a href="{% url "catalog:index" %}" class="nav-link">Каталог</a></li>
             <li class="me-4 nav-item"><a href="#" class="nav-link">О бренде</a></li>
             <li class="me-4 nav-item"><a href="#" class="nav-link">Контакты</a></li>
           </ul>
@@ -46,7 +47,7 @@
         {% endblock %}
     </section>
 
-    <footer>
+    <footer class="footer mt-auto">
         <div class="row">
           
           <div class="col-3 mb-4">
