--- a/static/css/stylecard.css
+++ b/static/css/stylecard.css
@@ -1,12 +1,12 @@
 /* Heigth of product img control */
-.card-img-top {
+/* .card-img-top {
     width: 100%;
     height: 26rem;
     object-fit:scale-down;
-}
+} */
 
 /* Change img via hover */
-.picture2 {
+/* .picture2 {
     display: none;
 }
 
@@ -16,4 +16,8 @@
 
 .pictures:hover .picture2 {
     display: block;
-}
+} */
+
+/* .card-img-top {
+    width: 120rem;
+} */
