--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -4,15 +4,13 @@
 {% block content %}
 <div class="container-fluid mt-4">
     <div class="row">
-        <div class="col-lg-1">
-        </div>
-
+        <div class="col-lg-1"></div>
 
         <div class="col-lg-8 col-md-12">
             <div class="row">
                 {% for product in products %}
                 <div class="col-lg-4 col-md-6 mt-4">
-                    <div class="card" style="width: 26rem;">
+                    <div class="card border-0" style="width: 26rem;">
                         <a href={% url "catalog:product" product.slug %} class="text-decoration-none text-reset">
 
                             {% if product.image %}
@@ -22,14 +20,14 @@
                             {% endif %}
 
                             <div class="card-body">
-                                <h5 class="card-title">{{ product.name }}</h5>
+                                <h5 class="card-title text-center">{{ product.name }}</h5>
 
                                 {% if product.discount %}
-                                    <p><s>{{ product.price }}</s></p>
-                                    <p class="card-text">{{ product.sell_price }}</p>
+                                    <p class="card-text text-center"><s>{{ product.price }}</s></p>
+                                    <p class="card-text text-center">{{ product.sell_price }}</p>
                                     <span class='badge bg-warning text-dark'>Скидка {{ product.discount }} %</span>
                                 {% else %}
-                                    <p class="card-text">{{ product.price }}</p>
+                                    <p class="card-text text-center">{{ product.sell_price }}</p>
                                 {% endif %}
                             </div>
                         </a>
