about page added

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -30,7 +30,7 @@
         <div class="col-4 collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="me-4 nav-item"><a href="{% url "catalog:index" %}" class="nav-link">Каталог</a></li>
-            <li class="me-4 nav-item"><a href="#" class="nav-link">О бренде</a></li>
+            <li class="me-4 nav-item"><a href="{% url "main:about" %}" class="nav-link">О бренде</a></li>
             <li class="me-4 nav-item"><a href="#" class="nav-link">Контакты</a></li>
           </ul>
         </div>
