--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -4,7 +4,8 @@
 {% block content %}
 <div class="container-fluid mt-4">
     <div class="row">
-        <div class="col-lg-1"></div>
+        {% comment %} Вроде бы можно убрать, так как в бейс добавлена колонка {% endcomment %}
+        {% comment %} <div class="col-lg-1"></div>  {% endcomment %}
 
         <div class="col-lg-8 col-md-12">
             <div class="row">
