--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -43,8 +43,13 @@
     </header>
 
     <section>
-        {% block content %}
-        {% endblock %}
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
     </section>
 
     <footer class="footer mt-auto">
@@ -55,7 +60,7 @@
           </div>
 
           <div class="col-3 mb-4">
-            <a class="nav-link" href="#">О шёлке</a>
+            <a class="nav-link" href="{% url "main:silk" %}">О шёлке</a>
           </div>
 
           <div class="col-3 mb-4">
