--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -44,7 +44,7 @@
 
     <section>
       <div class="row">
-        <div class="col-1"></div>
+        <div class="col-lg-1 col-md-1"></div>
         <div class="col-10">
           {% block content %}
           {% endblock %}
