--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -4,8 +4,9 @@
 {% block content %}
 <div class="container-fluid mt-4">
     <div class="row">
+        <div class="col-lg-2 col-md-1"></div>
 
-        <div class="col-lg-8 col-md-12">
+        <div class="col-lg-8 col-md-11">
             <div class="row justify-content-center">
 
                 {% for product in products %}
@@ -14,20 +15,25 @@
                             <a href={% url "catalog:product" product.slug %} class="text-decoration-none text-reset">
 
                                 {% if product.image %}
-                                    <img src="{{ product.image.url }}" class="card-img-top img-fluid" alt="{{ product.name }}">
+                                    <img src="{{ product.image.url }}" 
+                                         class="card-img-top img-fluid" 
+                                         alt="{{ product.name }}">
+
                                 {% else %}
-                                    <img src={% static "images/no-product-image.jpeg" %} class="card-img-top img-fluid" alt="No Product Image">
+                                    <img src={% static "images/no-product-image.jpeg" %} 
+                                         class="card-img-top img-fluid" 
+                                         alt="No Product Image">
                                 {% endif %}
 
                                 <div class="card-body">
                                     <h5 class="card-title text-center">{{ product.name }}</h5>
 
                                     {% if product.discount %}
-                                        <p class="card-text text-center"><s>{{ product.price }}</s> {{ product.sell_price }}</p>
+                                        <p class="card-text text-center"><s class="text-secondary">{{ product.price }}</s>   {{ product.sell_price }} &#8381;</p>
                                         {% comment %} <p class="card-text text-center">{{ product.sell_price }}</p> {% endcomment %}
                                         {% comment %} <span class='badge bg-warning text-dark'>Скидка {{ product.discount }} %</span> {% endcomment %}
                                     {% else %}
-                                        <p class="card-text text-center">{{ product.sell_price }}</p>
+                                        <p class="card-text text-center">{{ product.sell_price }} &#8381;</p>
                                     {% endif %}
                                 </div>
                             </a>
@@ -37,6 +43,9 @@
 
             </div>
         </div>
+
+        <div class="col-lg-2 col-md-1"></div>
+
     </div>
 </div>
 
