--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -2,7 +2,45 @@
 {% load static %}
 
 {% block content %}
-<div class="col-lg-4 col-md-6 mt-4">
+
+<div class="col-12">
+    <div class="row">
+        <div class="col-lg-1 col-md-1"></div>
+
+        <div class="col-lg-5 col-md-5">
+            {% if product.image %}
+                <img src="{{ product.image.url }}" class="card-img-top img-fluid" alt="{{ product.name }}">
+            {% else %}
+                <img src={% static "images/no-product-image.jpeg" %} class="card-img-top img-fluid" alt="No Product Image">
+            {% endif %}
+
+        </div>
+
+        <div class="col-lg-1 col-md-1"></div>
+
+        <div class="col-lg-5 col-md-5">
+            <h2 class="card-title">{{ product.name }}</h5>
+
+            {% if product.discount %}
+                <p class="card-text mt-4 fs-4"><s class="text-secondary">{{ product.price }}</s>   {{ product.sell_price }} &#8381;</p>
+            {% else %}
+                <p class="card-text mt-4 fs-4">{{ product.sell_price }} &#8381;</p>
+            {% endif %}
+            
+            <a href="#" class="btn btn-outline-dark fs-5 mt-3">Добавить в корзину</a>
+
+            <h5 class="mt-4">Описание</h5>
+            {% if product.description %}
+                <p>{{ product.description }}</p>
+            {% else %}
+                <p>Описания пока что нет.</p>
+            {% endif %}
+
+        </div>
+    </div>
+</div>
+
+{% comment %} <div class="col-lg-4 col-md-6 mt-4">
     <div class="card" style="width: 26rem;">
         <a href="#" class="text-decoration-none text-reset">
 
@@ -27,5 +65,5 @@
             </div>
         </a>
     </div>
-</div>
+</div> {% endcomment %}
 {% endblock %}
